--- a/сайт/main.css
+++ b/сайт/main.css
@@ -3,11 +3,12 @@ body{
 	background-color:#E7D472;
 	background: linear-gradient(to bottom right, #ebc923, #faeeb4);
 }
+
 #page{
     margin:0;
     margin-left:15%;
     margin-right:15%;
-    background-color: white;
+    background-color: rgb(252, 239, 239);
 }
 
 #header{
@@ -19,7 +20,7 @@ body{
 }
 #liHead{   
     margin:0 0 0 0;
-    margin-left: 180px;
+    margin-left: 70px;
     font-weight:bold;
     box-sizing: border-box;
 }
@@ -36,6 +37,7 @@ li{
 }
 a:link{
     color:#000;
+    text-decoration: none;
    
 }
 a:visited {
@@ -50,13 +52,15 @@ h1{
     text-align: center;
 }
 #mainText{
-    height:100%;
+    padding: 0;
+    margin: 0;
+    height:max-content;
     padding-left:5%;
     padding-right: 5%;
 }
 footer{
 	
-	height:60px;
+	height:20px;
 	width:100%;
 	background-color:#A95B1B;
 }
